# assistant-agent-kanban

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.local.yaml  config.yaml  init.sh  pyproject.toml  pyrightconfig.json  run.sh  thinking-mode-recovery.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.opencode/agents/: fs-kanban-committer.md  fs-kanban-implementer.md  fs-kanban-planner.md  fs-kanban-reviewer.md
docs/: 01-architecture-review.md  02-implementation-plan.md  03-agent-task.md
examples/: config.yaml
examples/bootstrap/: README.md
lib/: firstrun_prompts.sh  init_summary.sh  python_runtime.sh
src/assistant_agent_kanban/: __init__.py  agent_materializer.py  antigravity_adapter.py  assistant_adapter.py  assistant_factory.py  claude_adapter.py  client_encrypted_credentials.py  codex_adapter.py  commit_manager.py  config.py  enums.py  exceptions.py  gemini_adapter.py  generated_artifacts.py  integration_manager.py  log_parser.py  main.py  markdown_attachments.py  metadata_store.py  models.py  omo_config.py  opencode_adapter.py  plan_artifacts.py  recovery.py  repo_branches.py  repo_discovery.py  request_creator.py  request_draft_store.py  request_drafting.py  (+15 more)
tests/: conftest.py  test_agent_materializer.py  test_antigravity_adapter.py  test_api.py  test_api_approve_verification.py  test_board_service.py  test_claude_adapter.py  test_codex_adapter.py  test_commit_manager.py  test_committer_worker.py  test_config.py  test_firstrun_prompts.py  test_gemini_adapter.py  test_human_verification_service.py  test_implementer_worker.py  test_init_summary.py  test_integration_manager.py  test_locks.py  test_log_parser.py  test_main.py  test_metadata_store.py  test_opencode_adapter.py  test_plan_approval_learning.py  test_plan_approval_worker.py  test_planner_worker.py  test_recovery.py  test_request_cli.py  test_request_draft_store.py  test_request_drafting.py  test_request_parser.py  test_retrospective_service.py  test_reviewer_worker.py  test_run_script.py  test_runtime.py  test_scanner.py  test_server_instance.py  test_slack_api.py  test_slack_notifications.py  test_slack_runtime.py  test_slack_settings_test.py  (+7 more)
(+127 files in other folders)
