[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-agent-kanban"
version = "0.1.0"
description = "Assistant Agent Kanban for filesystem-backed AI workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "filelock>=3.16",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0.2",
  "sse-starlette>=2.1",
  "uvicorn>=0.30",
  "watchfiles>=0.24",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
]

[project.scripts]
assistant-agent-kanban = "assistant_agent_kanban.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
