[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-agent-kanban"
version = "0.1.0"
description = "Assistant Agent Kanban for filesystem-backed AI workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.115",
  "filelock>=3.16",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0.2",
  "sse-starlette>=2.1",
  "uvicorn>=0.30",
  "watchfiles>=0.24",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pyright>=1.1.390",
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
assistant-agent-kanban = "assistant_agent_kanban.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
assistant_agent_kanban = [
  "agent_prompts/opencode/*.md",
  "api/templates/*.css",
  "api/templates/*.html",
  "api/templates/js/*.js",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
